[gd_scene load_steps=16 format=2]

[ext_resource path="res://Menu/Graphics/theme/MasterTheme.tres" type="Theme" id=1]
[ext_resource path="res://Menu/Tutorial/TutorialPopUp.gd" type="Script" id=2]
[ext_resource path="res://Menu/Tutorial/TutorialPage1.png" type="Texture" id=3]
[ext_resource path="res://Menu/Tutorial/TutorialPage2.png" type="Texture" id=4]
[ext_resource path="res://Menu/Tutorial/TutorialPage5.png" type="Texture" id=5]
[ext_resource path="res://Menu/Tutorial/TutorialPage3.png" type="Texture" id=6]
[ext_resource path="res://Menu/Tutorial/TutorialPage4.png" type="Texture" id=7]
[ext_resource path="res://Menu/Tutorial/TutorialPage6.png" type="Texture" id=8]
[ext_resource path="res://Menu/Graphics/Button/CrossNormal.png" type="Texture" id=9]
[ext_resource path="res://Menu/Graphics/Button/CrossHover.png" type="Texture" id=10]
[ext_resource path="res://Menu/Graphics/Button/ArrowNormal.png" type="Texture" id=11]
[ext_resource path="res://Menu/Graphics/Button/ArrowPressed.png" type="Texture" id=12]
[ext_resource path="res://Menu/Graphics/Button/ArrowHover.png" type="Texture" id=13]
[ext_resource path="res://Menu/Graphics/theme/font/FontDerelictRegularBig.tres" type="DynamicFont" id=14]
[ext_resource path="res://Menu/Graphics/theme/font/FontDerelictRoughBig.tres" type="DynamicFont" id=15]

[node name="TutorialPopUp" type="Panel" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -733.0
margin_top = -405.0
margin_right = 709.0
margin_bottom = 406.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
script = ExtResource( 2 )
page1 = ExtResource( 3 )
page2 = ExtResource( 4 )
page3 = ExtResource( 5 )
page4 = ExtResource( 6 )
page5 = ExtResource( 7 )
page6 = ExtResource( 8 )
closeFocus = null

[node name="CloseBtn" type="TextureButton" parent="." index="0"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -75.0
margin_top = 25.0
margin_right = -25.0
margin_bottom = 75.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_left = NodePath("../NextBtn")
focus_neighbour_top = NodePath("../NextBtn")
focus_neighbour_right = NodePath("../NextBtn")
focus_neighbour_bottom = NodePath("../NextBtn")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 10 )
expand = true
_sections_unfolded = [ "Focus", "Rect", "Textures" ]

[node name="PreviousBtn" type="TextureButton" parent="." index="1"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = 140.0
margin_top = -112.0
margin_right = 217.0
margin_bottom = -35.0
rect_scale = Vector2( -1, 1 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_left = NodePath("../NextBtn")
focus_neighbour_top = NodePath("../CloseBtn")
focus_neighbour_right = NodePath("../NextBtn")
focus_neighbour_bottom = NodePath("../CloseBtn")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 13 )
expand = true
_sections_unfolded = [ "Focus", "Rect", "Textures" ]

[node name="NextBtn" type="TextureButton" parent="." index="2"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -112.0
margin_top = -112.0
margin_right = -35.0
margin_bottom = -35.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_left = NodePath("../PreviousBtn")
focus_neighbour_top = NodePath("../CloseBtn")
focus_neighbour_right = NodePath("../PreviousBtn")
focus_neighbour_bottom = NodePath("../CloseBtn")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 13 )
expand = true
_sections_unfolded = [ "Focus", "Rect", "Textures" ]

[node name="TextureRect" type="TextureRect" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 108.0
margin_top = 107.0
margin_right = -108.0
margin_bottom = -106.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 4
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="PageCount" type="Label" parent="." index="4"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -82.0
margin_right = 29.0
margin_bottom = -32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 14 )
text = "1/5"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Header" type="Label" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 68.0
margin_top = 33.0
margin_right = -69.0
margin_bottom = 133.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 15 )
text = "header"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[connection signal="pressed" from="CloseBtn" to="." method="onCloseBtnPressed"]

[connection signal="pressed" from="PreviousBtn" to="." method="onPreviousBtnPressed"]

[connection signal="pressed" from="NextBtn" to="." method="onNextBtnPressed"]


